Add material modal

--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -1,3 +1,8 @@
-<p>
-  modal works!
-</p>
+<h1 mat-dialog-title></h1>
+<mat-dialog-content>
+
+</mat-dialog-content>
+<mat-dialog-actions>
+  <button mat-button></button>
+  <button mat-button></button>
+</mat-dialog-actions>
