Move font to style.css

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,6 +1,10 @@
 @font-face
   font-family: 'Futura Futurus'
   src: url('../assets/ParaType-FuturaFuturisRegular.otf')
+
+body
+  font-family: "Futura Futurus"
+
 div
   font-family: "Futura Futurus"
   -webkit-box-sizing: border-box
