--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -3,10 +3,25 @@
   src: url('../assets/ParaType-FuturaFuturisRegular.otf')
 
 body
-  font-family: "Futura Futurus"
+  font-family: 'Futura Futurus'
 
 div
-  font-family: "Futura Futurus"
   -webkit-box-sizing: border-box
   -moz-box-sizing: border-box
   box-sizing: border-box
+content
+  display: flex
+  justify-content: center
+  padding: 2rem
+  .table
+    width: 70%
+    border-collapse: collapse
+    th
+      cursor: pointer
+      text-align: left
+    td
+      padding: 1rem
+    tr
+      border-bottom: 1px solid grey
+    tr:last-child
+      border-bottom: 0 solid grey
