--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -61,13 +61,18 @@
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let item of list">
+      <tr *ngFor="let item of showList">
         <td (click)="edit(item)">{{item.id}}</td>
         <td>{{item.resources}}</td>
         <td>{{item.comment}}</td>
       </tr>
       </tbody>
     </table>
+  </div>
+  <div class="pagination" *ngIf="list.length>9">
+    <div class="page" *ngFor="let item of getCountPages();index as i">
+      <button (click)="showPage(i+1)" [disabled]="i+1===currentPage">{{i+1}}</button>
+    </div>
   </div>
   <div class="add-container">
     <button (click)="add()">Добавить</button>
