Add routing and request-sorting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,81 +1,1 @@
-<header></header>
-<content>
-  <div class="table-container">
-    <table class="table">
-      <thead>
-      <tr>
-        <th (click)="sort('id')">
-          Id
-          <ng-container *ngIf="sorting['id']===0">
-            <i class="material-icons">
-              unfold_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['id']===1">
-            <i class="material-icons">
-              expand_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['id']===-1">
-            <i class="material-icons">
-              expand_less
-            </i>
-          </ng-container>
-        </th>
-        <th (click)="sort('resources')">
-          Средства
-          <ng-container *ngIf="sorting['resources']===0">
-            <i class="material-icons">
-              unfold_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['resources']===1">
-            <i class="material-icons">
-              expand_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['resources']===-1">
-            <i class="material-icons">
-              expand_less
-            </i>
-          </ng-container>
-        </th>
-        <th (click)="sort('comment')">
-          Комментарий
-          <ng-container *ngIf="sorting['comment']===0">
-            <i class="material-icons">
-              unfold_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['comment']===1">
-            <i class="material-icons">
-              expand_more
-            </i>
-          </ng-container>
-          <ng-container *ngIf="sorting['comment']===-1">
-            <i class="material-icons">
-              expand_less
-            </i>
-          </ng-container>
-        </th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let item of showList">
-        <td (click)="edit(item)">{{item.id}}</td>
-        <td>{{item.resources}}</td>
-        <td>{{item.comment}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pagination" *ngIf="list.length>9">
-    <div class="page" *ngFor="let item of getCountPages();index as i">
-      <button (click)="showPage(i+1)" [disabled]="i+1===currentPage">{{i+1}}</button>
-    </div>
-  </div>
-  <div class="add-container">
-    <button (click)="add()">Добавить</button>
-  </div>
-</content>
-
+<router-outlet></router-outlet>
