--- a/src/app/list/modal/modal.component.html
+++ b/src/app/list/modal/modal.component.html
@@ -11,7 +11,7 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button (click)="submit()">{{new(data)? 'Добавить' : 'Сохранить'}}</button>
+    <button mat-button (click)="submit()" [disabled]="modalForm.invalid">{{new(data)? 'Добавить' : 'Сохранить'}}</button>
     <button mat-button mat-dialog-close>Отмена</button>
   </mat-dialog-actions>
 </form>
