--- a/src/app/list/modal/modal.component.html
+++ b/src/app/list/modal/modal.component.html
@@ -1,18 +1,34 @@
 <form [formGroup]="modalForm">
-  <h1 mat-dialog-title></h1>
-  <mat-dialog-content>
-    <div class="field">
-      <div class="name">Средства</div>
-      <div class="input"><input type="number" formControlName="resources" name="resources"></div>
+  <div class="modal">
+    <div class="title">
+      <h1>
+        {{new(data)? 'Новая запись' : 'Запись #'+data.id}}
+      </h1>
     </div>
-    <div class="field">
-      <div class="name">Комментарий</div>
-      <div class="input"><input type="text" formControlName="comment" name="comment"></div>
+    <div class="content">
+      <div class="field">
+        <div class="input">
+          <input type="number" placeholder="Средства" formControlName="resources" name="resources">
+        </div>
+      </div>
+      <div class="field">
+        <div class="input">
+          <textarea maxlength="512" rows="5" placeholder="Комментарий" formControlName="comment"
+                    name="comment"></textarea>
+        </div>
+      </div>
     </div>
-  </mat-dialog-content>
-  <mat-dialog-actions>
-    <button mat-button (click)="submit()" [disabled]="modalForm.invalid">{{new(data)? 'Добавить' : 'Сохранить'}}</button>
-    <button mat-button mat-dialog-close>Отмена</button>
-  </mat-dialog-actions>
+    <div class="actions">
+      <div class="buttons">
+        <div>
+          <button mat-button (click)="submit()" [disabled]="modalForm.invalid">{{new(data)? 'Добавить' : 'Сохранить'}}
+          </button>
+        </div>
+        <div>
+          <button mat-button mat-dialog-close>Отмена</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </form>
 
