Add colors variables

--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -1,3 +1,17 @@
+$back: #f1f1f1
+$border: #c0c1c2
+$red: #ff2d00
+$top: #eaeaea
+$summ: #fbfbfb
+$summBorder: $border
+$tableHeadLine: #4f4f4f
+$stripRow: #f0f0f0
+$buttonDefault: linear-gradient(to right, #fff, #edf2f6)
+$buttonDefaultBorder: $border
+$buttonActive: linear-gradient(to right, $red, #971d02)
+$buttonActiveBorder: $red
+$buttonActiveGlow: #e42800
+
 @font-face
   font-family: 'Futura Futurus'
   src: url('../../assets/ParaType-FuturaFuturisRegular.otf')
@@ -31,6 +45,7 @@ div, input, textarea
 div, header, content
   outline: 0px solid black
 header
+  background-color: #eaeaea
   border-bottom: 3px solid black
   .header-container
     display: flex
