--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -3,7 +3,7 @@ $border: #c0c1c2
 $red: #ff2d00
 $summ: #fbfbfb
 $summBorder: $border
-$top: linear-gradient(to bottom, $summ, #eaeaea)
+$top: linear-gradient(to bottom, $summ, #f9f9f9)
 $tableHeadLine: #4f4f4f
 $tableBorderBetween: #eef2f5
 $stripRow: #f0f0f0
@@ -48,7 +48,7 @@ div, header, content
 
 header
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1)
-  background-color: $top
+  background: $top
   border-bottom: 3px solid $red
   .header-container
     display: flex
