--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -78,7 +78,9 @@
         </thead>
         <tbody>
         <tr *ngFor="let item of showList">
-          <td (click)="edit(item)" class="id">{{item.id}}</td>
+          <!-- Здесь я не могу использовать [routerLink]="['']", потому как работаю с адресной строкой, потому для заглушки
+          дефолтного действия я использую href="javascript:;"-->
+          <td class="id"><a (click)="edit(item)" href="javascript:;">{{item.id}}</a></td>
           <td>{{item.resources}}</td>
           <td>{{item.comment}}</td>
         </tr>
