--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -65,7 +65,8 @@ header
       border: 1px solid $summBorder
       border-radius: 0.2rem
     .summ
-      font-size: 2rem
+      font-size: 2.5rem
+      color: $red
       text-align: center
 
 .table-container
@@ -96,7 +97,9 @@ header
           margin-left: 0.4rem
           font-size: 1rem
     td
-      padding: 1rem
+      padding: 1rem 1rem 1rem 1.5rem
+      a
+        color: black !important
       .id
         cursor: pointer
     td, th
