--- a/src/app/list/modal/modal.component.html
+++ b/src/app/list/modal/modal.component.html
@@ -25,7 +25,7 @@
           </button>
         </div>
         <div>
-          <button mat-button mat-dialog-close>Отмена</button>
+          <button mat-button mat-dialog-close class="close">Отменить</button>
         </div>
       </div>
     </div>
