--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -7,7 +7,7 @@ $tableHeadLine: #4f4f4f
 $tableBorderBetween: #eef2f5
 $stripRow: #f0f0f0
 $buttonDefault: linear-gradient(to bottom, #fff, #edf2f6)
-$buttonActive: linear-gradient(to top, $red, #971d02)
+$buttonActive: linear-gradient(to top, $red, #ca2601)
 $buttonActiveBorder: $red
 $buttonActiveGlow: #e42800
 
