--- a/src/app/list/modal/modal.component.sass
+++ b/src/app/list/modal/modal.component.sass
@@ -2,7 +2,7 @@
 $red: #ff2d00
 $border: #c0c1c2
 $buttonDefault: linear-gradient(to bottom, #fff, #edf2f6)
-$buttonActive: linear-gradient(to top, $red, #971d02)
+$buttonActive: linear-gradient(to top, $red, #ca2601)
 $buttonActiveBorder: $red
 $buttonActiveGlow: #e42800
 
