--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -131,7 +131,7 @@ header
       box-shadow: inset 0px 0px 5px $red
     .add-container
       button
-        padding: 0 3em 0 3rem
+        padding: 0 3rem 0 3rem
     .pagination
       .page
         float: left
