--- a/src/app/list/modal/modal.component.sass
+++ b/src/app/list/modal/modal.component.sass
@@ -1,4 +1,3 @@
-
 $red: #ff2d00
 $border: #c0c1c2
 $buttonDefault: linear-gradient(to bottom, #fff, #edf2f6)
@@ -14,7 +13,7 @@ $buttonActiveGlow: #e42800
   .modal
     min-width: 500px
 
-form, button, h1, input, textarea
+form, button, h1, input, textarea, .alert
   font-family: 'Futura Futurus'
 
 div, input, textarea
@@ -22,15 +21,18 @@ div, input, textarea
   -moz-box-sizing: border-box
   box-sizing: border-box
 
-button, input, textarea
+button, input, textarea, .popover
   border: 1px solid $border
   border-radius: 0.3rem
 
-button, input
+input, textarea, .alert
+  font-size: 0.9rem
+
+button, input, .popover, .alert
   height: 2.7rem
 
 button
-  padding: 0 3em 0 3rem
+  padding: 0 3rem 0 3rem
   outline: 0
   cursor: pointer
   font-size: 0.9rem
@@ -53,7 +55,7 @@ button
     border: 1px solid $buttonActiveBorder
     box-shadow: inset 0px 0px 5px $red
   &:disabled
-    color: rgba(0,0,0,0.3)
+    color: rgba(0, 0, 0, 0.3)
 
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
   -webkit-appearance: none
@@ -61,7 +63,6 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
 
 div
   outline: 0px solid black
-
 
 .modal
   display: flex
@@ -75,15 +76,53 @@ div
       font-size: 2.4rem
       margin: 0
   .content
-    .input
-      textarea
-        margin-top: 1rem
-        padding: 1rem 0 0 1rem
-      input
-        padding-left: 1rem
-      input, textarea
+    .field
+      position: relative
+      float: left
+      width: 100%
+      &:last-child
+        padding-top: 1rem
+      .alert
+        position: absolute
+        padding: 0.8rem 0 0.7rem 0.6rem
+        color: $red
+      .alert-textarea
+        padding-top: 1.1rem
+      .input
+        float: left
         width: 100%
-
+        textarea
+          padding: 1rem 0 0 1.2rem
+        input
+          padding-left: 1.2rem
+        input, textarea
+          width: 100%
+      .popover
+        border: 1px solid $red
+        position: absolute
+        left: 100%
+        margin-left: 1rem
+        float: left
+        background: $red
+        color: white
+        padding: 0.7rem 1.2rem 0.7rem 1.2rem
+        white-space: nowrap
+        &:after
+          right: 100%
+          border: solid transparent
+          content: " "
+          height: 0
+          width: 0
+          position: absolute
+          pointer-events: none
+          border-right-color: $red
+          border-width: 0.5rem
+          margin-top: 1px
+        .message
+          float: left
+          padding: 3rem
+    &:last-child
+      padding-top: 1rem
   .buttons
     display: flex
     flex-direction: row
