--- a/src/styles.css
+++ b/src/styles.css
@@ -13,4 +13,9 @@ body, html {
 
 
 .mat-dialog-container{
-  border-top: 3px solid red !important}
+  border-top: 3px solid red;
+  overflow: visible !important;
+}
+
+
+
