--- a/src/app/list/modal/modal.component.sass
+++ b/src/app/list/modal/modal.component.sass
@@ -17,6 +17,9 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
   -webkit-appearance: none
   margin: 0
 
+input[type='number']
+  -moz-appearance: textfield
+
 form, button, h1, input, textarea, .alert
   font-family: 'Futura Futurus'
 
