Small corrections fo mobile view

--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -103,6 +103,7 @@ header
     td:last-child, th:last-child
       border-right: 0 solid grey
   .buttons
+    padding-bottom: 1.5rem
     display: flex
     flex-direction: row
     justify-content: space-between
