--- a/src/app/list/modal/modal.component.sass
+++ b/src/app/list/modal/modal.component.sass
@@ -8,6 +8,17 @@ $buttonActiveGlow: #e42800
 @media screen and (max-width: 660px)
   .modal
     min-width: auto
+  .popover
+    font-size: 0.6rem
+    margin-left: 0.5rem !important
+    padding: 0.8rem 0.5rem 0.8rem 0.5rem !important
+  .buttons
+    button
+      padding: 0 1rem 0 1rem
+      font-size: 0.7rem
+  .actions
+    padding-top: 0 !important
+
 
 @media screen and (min-width: 660px)
   .modal
