Small corrections fo mobile view

--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -20,6 +20,10 @@ $buttonActiveGlow: #e42800
     flex-direction: column !important
   .buttons
     flex-direction: column !important
+  .table
+    th
+      max-width: 2rem
+
 
 @media screen and (max-width: 768px)
   .container
