--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 
+@media screen and (max-width: 500px) {
+  .mat-dialog-container {
+    width: 100% !important;
+  }
+
+  .cdk-overlay-pane {
+    max-width: initial !important;
+  }
+}
+
 body {
   font-family: "Futura Futurus";
   background-color: #f1f1f1;
