--- a/src/app/list/list.component.sass
+++ b/src/app/list/list.component.sass
@@ -92,10 +92,6 @@ header
       .control
         display: flex
         align-items: center
-        i
-          color: $red
-          margin-left: 0.4rem
-          font-size: 1rem
     td
       padding: 1rem 1rem 1rem 1.5rem
       a
@@ -146,3 +142,9 @@ content, header
   flex-direction: column
   justify-content: center
   align-items: center
+
+
+.arrow
+  color: $red
+  margin-left: 0.4rem
+  font-size: 1rem
